refine dockerfile